--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
         </section>
     </template>
     <div id="app"></div>
-    <script src="./dist/app9.js"></script>
+    <script src="./dist/bundle.js"></script>
 </body>
 </html>
