Using ES Modules

--- a/index.html
+++ b/index.html
@@ -8,14 +8,6 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    <!-- <input type="text" id="user-input"> -->
-    <!-- <div id="app"></div> -->
-    <!-- <button>Click Me</button> -->
-    <!-- <form>
-        <input type="text" id="title" placeholder="Course Title">
-        <input type="text" id="price" placeholder="Course Price">
-        <button type="submit">Save</button>
-    </form> -->
     <template id="project-input">
         <form>
             <div class="form-control">
@@ -49,6 +41,6 @@
         </section>
     </template>
     <div id="app"></div>
-    <script src="./dist/bundle.js"></script>
+    <script type="module" src="./dist/app.js"></script>
 </body>
 </html>
